<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="Mutsrin Alim Quiz 1"
        android:textAlignment="center"
        android:background="#8008"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_pelanggan"
        android:layout_marginTop="30dp">
    </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tilayout1">

        <RadioButton
            android:id="@+id/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emas"
            />

        <RadioButton
            android:id="@+id/silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perak"
            />

        <RadioButton
            android:id="@+id/biasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biasa"
 />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kodebarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kode_barang"
            android:layout_below="@+id/radio"
            android:layout_marginTop="15dp"
            android:inputType="textCapCharacters"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilayout2"
>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jumlahbarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jumlah_barang"
            android:layout_marginTop="15dp"
            android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/proses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilayout3"
        android:layout_marginTop="60dp"
        android:text="@string/proses"
        android:layout_marginStart="250dp"
        />

</RelativeLayout>